fix: modal z-index

--- a/components/TaskTableItem.module.scss
+++ b/components/TaskTableItem.module.scss
@@ -98,6 +98,6 @@
   }
 }
 .modal {
-  position: relative;
+  position: relative !important;
   z-index: 2 !important;
 }
